--- a/Form Design.html
+++ b/Form Design.html
@@ -16,8 +16,19 @@
               <main id=”spirit-shell-main” class=”spirit-shell__main”>
                 <div class="spirit-container">
                     <div class="spirit-container__inner spirit-container__inner--large">
-                        <h3>Large Container</h3>
-                        <p>Test 2</p>
+                      <div class="spirit-container">
+                          <div class="spirit-container__inner">
+                              <div class="spirit-row">
+                                  <div class="spirit-col spirit-align-self-start"> Align top <br>
+                                      <br>
+                                      <br>
+                                  </div>
+                                  <div class="spirit-col spirit-align-self-start"> Align center </div>
+                                  <div class="spirit-col spirit-align-self-end"> Align bottom <br>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
                     </div>
                 </div>
               </main>
