--- a/Form Design.html
+++ b/Form Design.html
@@ -19,12 +19,12 @@
                       <div class="spirit-container">
                           <div class="spirit-container__inner">
                               <div class="spirit-row">
-                                  <div class="spirit-col spirit-align-self-start"> Align top <br>
+                                  <div class="spirit-col spirit-align-self-start visible-lg-*"> Align top <br>
                                       <br>
                                       <br>
                                   </div>
-                                  <div class="spirit-col spirit-align-self-start"> Align center </div>
-                                  <div class="spirit-col spirit-align-self-end"> Align bottom <br>
+                                  <div class="spirit-col spirit-align-self-start"> Align top </div>
+                                  <div class="spirit-col spirit-align-self-end visible-lg-*"> Align bottom <br>
                                   </div>
                               </div>
                           </div>
