--- a/Form Design.html
+++ b/Form Design.html
@@ -5,7 +5,7 @@
   <link href="https://cdn.jdrf.design/v/1.3.0/styles/spirit.min.css" rel="stylesheet" />
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
   <script type="text/javascript" src="https://cdn.jdrf.design/v/1.3.0/scripts/dependencies/spirit.bundle.min.js"></script>
-  <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>  
+  <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <div class="spirit-shell">
@@ -14,16 +14,15 @@
               <a class="spirit-skip-link spirit-screen-reader-text--can-focus spirit-button spirit-button spirit-button--minimal spirit-button--extra-small" href="#spirit-shell-main">Skip to content</a>
               <header class=”spirit-shell__header”>
                   <!-- Navigation goes here -->
+                  <p>Logo goes here</p>
               </header>
-              <main id=”spirit-shell-main” class=”spirit-shell__main”>
+              <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container">
                     <div class="spirit-container__inner spirit-container__inner--large">
                       <div class="spirit-container">
                           <div class="spirit-container__inner">
                               <div class="spirit-row">
                                   <div class="spirit-col spirit-align-self-start visible-lg-*"> Align top <br>
-                                      <br>
-                                      <br>
                                   </div>
                                   <div class="spirit-col spirit-align-self-start"> Align top </div>
                                   <div class="spirit-col spirit-align-self-end visible-lg-*"> Align bottom <br>
@@ -34,8 +33,9 @@
                     </div>
                 </div>
               </main>
-              <footer class=”spirit-shell__footer”>
+              <footer class="spirit-shell__footer">
                   <!-- Utility links go here -->
+                  <p>Footer goes here</p>
               </footer>
           </div>
       </div>
