--- a/Form Design.html
+++ b/Form Design.html
@@ -19,16 +19,22 @@
               <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container">
                     <div class="spirit-container__inner spirit-container__inner--large">
-                      <div class="spirit-container">
-                          <div class="spirit-container__inner">
-                              <div class="spirit-row">
-                                  <div class="spirit-col spirit-align-self-start visible-lg-*"> Align top <br>
-                                  </div>
-                                  <div class="spirit-col spirit-align-self-start"> Align top </div>
-                                  <div class="spirit-col spirit-align-self-end visible-lg-*"> Align bottom <br>
-                                  </div>
-                              </div>
-                          </div>
+                      <div class="spirit-row">
+                        <div class="spirit-col spirit-align-self-start visible-lg-*">
+
+                          Align top
+                          
+                        </div>
+                        <div class="spirit-col spirit-align-self-start">
+
+                          Align top
+
+                        </div>
+                        <div class="spirit-col spirit-align-self-end visible-lg-*">
+
+                          Align bottom
+
+                        </div>
                       </div>
                     </div>
                 </div>
