--- a/Form Design.html
+++ b/Form Design.html
@@ -14,7 +14,11 @@
               <a class="spirit-skip-link spirit-screen-reader-text--can-focus spirit-button spirit-button spirit-button--minimal spirit-button--extra-small" href="#spirit-shell-main">Skip to content</a>
               <header class=”spirit-shell__header”>
                   <!-- Navigation goes here -->
-                  <p>Logo goes here</p>
+                  <div class="spirit-container">
+                      <div class="spirit-container__inner">
+                          <p>Logo goes here</p>
+                      </div>
+                  </div>  
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container">
@@ -23,7 +27,7 @@
                         <div class="spirit-col spirit-align-self-start visible-lg-*">
 
                           Align top
-                          
+
                         </div>
                         <div class="spirit-col spirit-align-self-start">
 
