--- a/Form Design.html
+++ b/Form Design.html
@@ -4,6 +4,7 @@
 <title>JDRF</title>
   <link href="https://cdn.jdrf.design/v/1.3.0/styles/spirit.min.css" rel="stylesheet" />
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdn.jdrf.design/v/1.3.0/scripts/dependencies/spirit.bundle.min.js"></script>
   <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -18,7 +19,7 @@
                       <div class="spirit-container__inner">
                           <p>Logo goes here</p>
                       </div>
-                  </div>  
+                  </div>
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container">
