--- a/Form Design.html
+++ b/Form Design.html
@@ -16,7 +16,7 @@
               <header class=”spirit-shell__header”>
                   <!-- Navigation goes here -->
                   <div class="spirit-container">
-                      <div class="spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
+                      <div class="spirit-container__inner spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
                           <p>Logo goes here</p>
                       </div>
                   </div>
