--- a/Form Design.html
+++ b/Form Design.html
@@ -23,7 +23,7 @@
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container">
-                    <div class="spirit-container__inner spirit-container__inner--large">
+                    <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
                       <div class="spirit-row">
                         <div class="spirit-col spirit-align-self-start visible-lg-*">
 
