hidding side panels

--- a/Form Design.html
+++ b/Form Design.html
@@ -25,7 +25,7 @@
                 <div class="spirit-container">
                     <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
                       <div class="spirit-row">
-                        <div class="spirit-col spirit-align-self-start visible-lg-*">
+                        <div class="spirit-col spirit-align-self-start hidden-sm hidden-xs">
 
                           Align top
 
@@ -35,7 +35,7 @@
                           Align top
 
                         </div>
-                        <div class="spirit-col spirit-align-self-end visible-lg-*">
+                        <div class="spirit-col spirit-align-self-end hidden-sm hidden-xs">
 
                           Align bottom
 
