--- a/Form Design.html
+++ b/Form Design.html
@@ -26,7 +26,7 @@
                     <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
                       <div class="spirit-row">
 
-                        <div class="spirit-col spirit-align-self-start">
+                        <div class="spirit-col spirit-align-self-start spirit-elevation-1">
 
                           Align top
 
