--- a/Form Design.html
+++ b/Form Design.html
@@ -22,7 +22,7 @@
                   </div>
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
-                <div class="spirit-container">
+                <div class="spirit-container spirit-container--brush-watermark">
                     <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
                       <div class="spirit-row">
 
