brush background test

--- a/Form Design.html
+++ b/Form Design.html
@@ -23,17 +23,9 @@
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container spirit-container--brush-watermark">
-                    <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs">
-                      <div class="spirit-row">
-
-                        <div class="spirit-col spirit-align-self-start spirit-elevation-1">
-
-                          Align top
-
-                        </div>
-
-                      </div>
-                    </div>
+                  <div class="spirit-container__inner spirit-container__inner--brush-watermark">
+                  		<div class="jdrf-brush-watermark jdrf-brush-watermark__background-3"></div>
+                	</div>      
                 </div>
               </main>
               <footer class="spirit-shell__footer">
