--- a/Form Design.html
+++ b/Form Design.html
@@ -22,10 +22,11 @@
                   </div>
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
-                <div class="spirit-container spirit-container--brush-watermark">
-                  <div class="spirit-container__inner spirit-container__inner--brush-watermark">
-                  		<div class="jdrf-brush-watermark jdrf-brush-watermark__background-3"></div>
-                	</div>      
+                <div class="spirit-container">
+                    <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs" style="box-shadow: 0px 2px 4px 0px rgba(0, 85, 255, 0.16),
+0px 0px 4px 0px rgba(0, 85, 255, 0.08);">
+
+                    </div>
                 </div>
               </main>
               <footer class="spirit-shell__footer">
