--- a/Form Design.html
+++ b/Form Design.html
@@ -23,6 +23,7 @@
               </header>
               <main id="spirit-shell-main" class="spirit-shell__main">
                 <div class="spirit-container">
+                  Do we put this in the gutter?
                     <div class="spirit-container__inner spirit-container__inner--large spirit-container__inner--padding-top-xs spirit-container__inner--padding-bottom-xs" style="box-shadow: 0px 2px 4px 0px rgba(0, 85, 255, 0.16),
 0px 0px 4px 0px rgba(0, 85, 255, 0.08);">
 
