--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -1,68 +1,37 @@
 %%[
 	var @messageContext,@contactKey,@firstName,@lastName
-	var @monthlyNewsletter,@AdvocacyNewsletter,@researchNewsletter,@chapterUpdates
-  var @settingsObject,@publicationLists,@contactFields,@referrer,@agent,@formAction
+  var @settingsObject,@publicationLists,@contactFields,@referrer,@agent,@publicationList
+]%%
+<script runat=server>
+	Platform.Load("Core","1");
+	try
+	{
+</script>
+%%[
+  Set @contactKey = [_subscriberkey]
+  Set @publicationList = [listid]
   Set @publicationLists = LookupOrderedRows("Publication Lists",-1,"Order","Active",1);
-	Set @messageContext = [_messagecontext]
+  Set @messageContext = [_messagecontext]
   Set @agent = HTTPRequestHeader('User-Agent')
   Set @referrer = HTTPRequestHeader('Referer')
   Set @host = HTTPRequestHeader('Host')
 ]%%
 <script runat=server>
-	Platform.Load("Core","1");
-  var responseObject = {};
-	try
-	{
-</script>
-%%[
-	Set @contactKey = RequestParameter('contactKey')
-	Set @formAction = RequestParameter('formAction')
-	IF (@formAction == 'update') THEN
-	  var @updateRecord
-	  set @updateRecord = UpdateSingleSalesforceObject(
-	  "Contact", @contactKey,
-	  "Mkto_Research_News__c",Iif(RequestParameter("Mkto_Research_News__c") == "Mkto_Research_News__c","true","false"),
-		"Mkto_Advocacy__c",Iif(RequestParameter("Mkto_Advocacy__c") == "Mkto_Advocacy__c","true","false"),
-		"Mkto_Chapter_Updates__c",Iif(RequestParameter("Mkto_Chapter_Updates__c") == "Mkto_Chapter_Updates__c","true","false"),
-		"Mkto_Periodic_Email_Updates__c",Iif(RequestParameter("Mkto_Periodic_Email_Updates__c") == "Mkto_Periodic_Email_Updates__c","true","false")
-	  )
-		Redirect(Concat("/preferences?contactKey=",@contactKey,"&action=",@formAction))
-	ELSE
-		Set @settingsObject = "[";
-		Set @contactFields = 'Id, FirstName,LastName'
-		FOR @publicationListIndex = 1 TO RowCount(@publicationLists) DO
-			Set @ContactFields = Concat(Iif(Empty(@ContactFields),"",Concat(@ContactFields,",")),Field(Row(@publicationLists,@publicationListIndex),"CRM_Field_Name"))
-		NEXT @publicationListIndex
-		Set @rs= RetrieveSalesforceObjects('Contact', @contactFields, 'Id', '=', @contactKey);
-		IF RowCount(@rs) > 0 THEN
-		  FOR @publicationListIndex = 1 TO RowCount(@publicationLists) DO
-		    Set @publicationListTitle = Field(Row(@publicationLists,@publicationListIndex),"Title")
-		    Set @publicationListCRMFieldName = Field(Row(@publicationLists,@publicationListIndex),"CRM_Field_Name")
-		    Set @publicationListValue = Field(Row(@rs,1),@publicationListCRMFieldName)
-		    //Add object to array
-		    Set @settingsObject = Concat(@settingsObject,"{""Title"":""",@publicationListTitle,""",""CRMFieldName"":""",@publicationListCRMFieldName,""",""Value"":""",@publicationListValue,"""}",Iif(@publicationListIndex == RowCount(@publicationLists),"",","))
-			NEXT @publicationListIndex
-
-		  Set @firstName = Field(Row(@rs,1),'FirstName');
-		  Set @lastName = Field(Row(@rs,1),'LastName');
-		ENDIF
-		Set @settingsObject = Concat(@settingsObject,"]");
-	ENDIF
-]%%
-<script runat=server>
-    responseObject.contactKey = Variable.GetValue("@contactKey");
-    responseObject.firstName = Variable.GetValue("@firstName");
-    responseObject.lastName = Variable.GetValue("@lastName");
-    eval("responseObject.publicationListSettings = " + Variable.GetValue("@settingsObject"));
 	}
 	catch(e)
 	{
-		responseObject.error = e.message;
+    Platform.Response.Write(e.message);
 	}
-  finally
-  {
-		var responseString = Stringify(responseObject);
-    Platform.Response.SetResponseHeader("Content-Type","application/json");
-    Platform.Response.Write(responseString);
-  }
 </script>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Unsubscribe</title>
+  </head>
+  <body>
+  Publication List:  %%=V(@publicationList)=%% <br>
+  Contact Key:  %%=V(@contactKey)=%% <br>
+  </body>
+</html>
