--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -31,8 +31,8 @@
     <title>Unsubscribe</title>
   </head>
   <body>
-  <h4>Test 1</h4>
-  Publication List:  %%_subscriberkey%% <br>
-  Contact Key:  %%=V(@contactKey)=%% <br>
+  <h4>Test 2</h4>
+  Publication List:  %%[listid]%% <br>
+  Contact Key:  %%[_subscriberkey]%% <br>
   </body>
 </html>
