--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -10,5 +10,6 @@ set @firstName = _subscriberKey
    <body>
       <h2>Hello %%=v(@firstName)=%%,</h2>
       <p>Welcome to your personalized landing page.</p>
+      <p>Another Test:  %%_subscriberkey%%</p>
    </body>
 </html>
