--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -10,7 +10,7 @@
 %%[
 
   Set @contactKey = RequestParameter('contactKey')
-  Set @publicationList = RequestParameter('publicationList')
+  Set @publicationListID = RequestParameter('publicationList')
 
   /*Set @crmFieldName = Lookup('Publication Lists','CRM_Field_Name', @publicationList)*/
   Set @messageContext = [_messagecontext]
@@ -33,8 +33,8 @@
     <title>Unsubscribe</title>
   </head>
   <body>
-  <h4>Test 4</h4>
-  Publication List:  %%[listid]%% <br>
-  Contact Key:  %%[_subscriberkey]%% <br>
+  <h4>Test 5</h4>
+  Publication List:  %%=V(@publicationListID)=%% <br>
+  Contact Key:  %%=V(@contactKey)=%% <br>
   </body>
 </html>
