--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -9,14 +9,12 @@
 </script>
 %%[
 
-  Set @contactKey = RequestParameter('contactKey')
-  Set @publicationListID = RequestParameter('publicationList')
-
   /*Set @crmFieldName = Lookup('Publication Lists','CRM_Field_Name', @publicationList)*/
   Set @messageContext = [_messagecontext]
   Set @agent = HTTPRequestHeader('User-Agent')
   Set @referrer = HTTPRequestHeader('Referer')
   Set @host = HTTPRequestHeader('Host')
+  
 ]%%
 <script runat=server>
 	}
@@ -33,8 +31,7 @@
     <title>Unsubscribe</title>
   </head>
   <body>
-  <h4>Test 5</h4>
-  Publication List:  %%=V(@publicationListID)=%% <br>
-  Contact Key:  %%=V(@contactKey)=%% <br>
+  <h4>Personalization Test </h4>
+  Subscriber Key:  %%_subscriberKey%% <br>
   </body>
 </html>
