--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -14,7 +14,7 @@
   Set @agent = HTTPRequestHeader('User-Agent')
   Set @referrer = HTTPRequestHeader('Referer')
   Set @host = HTTPRequestHeader('Host')
-  
+
 ]%%
 <script runat=server>
 	}
@@ -31,7 +31,8 @@
     <title>Unsubscribe</title>
   </head>
   <body>
-  <h4>Personalization Test </h4>
+  <h4>Personalization Test 1</h4>
   Subscriber Key:  %%_subscriberKey%% <br>
+  List Name: %%_listname%%
   </body>
 </html>
