--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -9,7 +9,7 @@
 </script>
 %%[
 
-  Set @crmFieldName = Lookup('Publication Lists','CRM_Field_Name', AttributeValue('_listname'))
+  Set @crmFieldName = Lookup('Publication Lists','CRM_Field_Name', [_listname])
   Set @messageContext = [_messagecontext]
   Set @agent = HTTPRequestHeader('User-Agent')
   Set @referrer = HTTPRequestHeader('Referer')
@@ -31,7 +31,7 @@
     <title>Unsubscribe</title>
   </head>
   <body>
-  <h4>Personalization Test 2</h4>
+  <h4>Personalization Test 3</h4>
   Subscriber Key:  %%_subscriberKey%% <br>
   List Name: %%_listname%% <br>
   CRM Field Name:  %%=V(@crmFieldName)=%%
