--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -1,6 +1,6 @@
 %%[
 	var @messageContext,@contactKey,@firstName,@lastName
-  var @crmFieldName,@referrer,@agent,@host
+  var @crmFieldName,@referrer,@agent,@host,@updateRecord
 ]%%
 <script runat=server>
 	Platform.Load("Core","1");
@@ -14,6 +14,10 @@
   Set @agent = HTTPRequestHeader('User-Agent')
   Set @referrer = HTTPRequestHeader('Referer')
   Set @host = HTTPRequestHeader('Host')
+
+  IF NOT Empty(@crmFieldName) THEN
+    set @updateRecord = UpdateSingleSalesforceObject("Contact", [_subscriberKey],@crmFieldName,"false")
+  ENDIF
 
 ]%%
 <script runat=server>
