Update Record Debug

--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -38,6 +38,7 @@
   <h4>Personalization Test 3</h4>
   Subscriber Key:  %%_subscriberKey%% <br>
   List Name: %%_listname%% <br>
-  CRM Field Name:  %%=V(@crmFieldName)=%%
+  CRM Field Name:  %%=V(@crmFieldName)=%% <br>
+  Update Record:  %%=V(@updateRecord)=%%
   </body>
 </html>
