--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -35,10 +35,6 @@
     <title>Unsubscribe</title>
   </head>
   <body>
-  <h4>Personalization Test 3</h4>
-  Subscriber Key:  %%_subscriberKey%% <br>
-  List Name: %%_listname%% <br>
-  CRM Field Name:  %%=V(@crmFieldName)=%% <br>
-  Update Record:  %%=V(@updateRecord)=%%
+  <h4>You have successfully unsubscribed from &apos;%%_listname%%&apos;</h4>
   </body>
 </html>
