--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -39,11 +39,10 @@
     %%[
     ELSE
     ]%%
-    <title>Unsubscribe</title>
+    <title>Preferences</title>
     %%[
     ENDIF
     ]%%
-    <title>Unsubscribe</title>
   </head>
   <body>
     %%[
