--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -56,7 +56,7 @@
     ELSE
     ]%%
       <h4>You have successfully updated your preferences</h4>
-      Go back to <a href="%%=RedirectTo(Concat('/preferences?contactkey=',))">preferences</a>
+      Go back to <a href="%%=RedirectTo(Concat('/preferences?contactkey=',@contactKey))=%%">preferences</a>
     %%[
     ENDIF
     ]%%
