--- a/Unsubscribe Page.html
+++ b/Unsubscribe Page.html
@@ -55,7 +55,7 @@
     ELSE
     ]%%
       <h4>You have successfully updated your preferences</h4>
-      Go back to <a href="%%=RedirectTo(Concat('/preferences?contactkey=', @contactKey))=%%">preferences</a>
+      Go back to <a href="%%=RedirectTo(Concat('/preferences?contactkey=', @subscriberKey))=%%">preferences</a>
     %%[
     ENDIF
     ]%%
